--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "moment": "^2.29.4",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
